tests/errors/undefined-stitch.ink
// RUN: %ink-compiler --stdin --compile-only --dump-ast < %s | FileCheck %s

-> somewhere.but_not_here

== somewhere
= here
